# lib/api-spec/openapi.yaml
@@ -93,6 +93,10 @@ paths:
           in: query
           schema:
             type: boolean
+        - name: accountsStatus
+          in: query
+          schema:
+            type: string
         - name: page
           in: query
           schema:
